force-app/main/default/objects/Financial_Activity_Cost_Category__c/Financial_Activity_Cost_Category__c.object-meta.xml
<CustomObject>
    <description>These are the categories for the financial Activities</description>
    <label>Financial Activity Cost Category</label>
    <nameField>
        <displayFormat>FACC-{0}</displayFormat>
        <label>Financial Activity Cost Category Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Financial Activity Cost Categories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>