force-app/main/default/objects/Financial_Activity_Cost_Category__c/fields/Amount__c.field-meta.xml
<CustomField>
    <fullName>Amount__c</fullName>
    <inlineHelpText>Sum of amoun on all the details</inlineHelpText>
    <label>Amount</label>
    <summarizedField>CostCategoryDetail__c.Amount__c</summarizedField>
    <summaryFilterItems>
        <field>CostCategoryDetail__c.Reallocation__c</field>
        <operation>equals</operation>
        <value>False</value>
    </summaryFilterItems>
    <summaryForeignKey>CostCategoryDetail__c.FinancialActivityCostCategory__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>