force-app/main/default/objects/Financial_Activity_Cost_Category__c/fields/Budget_Category_Detail__c.field-meta.xml
<CustomField>
    <fullName>Budget_Category_Detail__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Budget Category Detail</label>
    <referenceTo>BudgetCategoryValue</referenceTo>
    <relationshipLabel>Financial Activity Cost Categories</relationshipLabel>
    <relationshipName>Financial_Activity_Cost_Categories</relationshipName>
    <type>Lookup</type>
</CustomField>