force-app/main/default/objects/Financial_Activity_Cost_Category__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <inlineHelpText>Name of the category</inlineHelpText>
    <label>Category</label>
    <length>65</length>
    <type>Text</type>
</CustomField>