force-app/main/default/objects/Financial_Activity_Cost_Category__c/fields/Financial_Activity__c.field-meta.xml
<CustomField>
    <fullName>Financial_Activity__c</fullName>
    <inlineHelpText>the parent financial activity of this category record.</inlineHelpText>
    <label>Financial Activity</label>
    <referenceTo>FundingDisbursement</referenceTo>
    <relationshipLabel>Financial Activity Cost Categories</relationshipLabel>
    <relationshipName>Financial_Activity_Cost_Categories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>